Renamed the votingStatus filter to votingResult
